--- a/RS232/RS232 Thingmagic/Thingmagicrs232v0.1
+++ b/RS232/RS232 Thingmagic/Thingmagicrs232v0.1
@@ -64,6 +64,7 @@ void setup()
 
   delay(100);
 
+
 }
 
 
@@ -74,11 +75,11 @@ void loop()
 // %%%%%%%%%%%%%%%%%%%%%%%%Area 2 Boot Firmware %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 // Send data through RS-232 line
   
-//HEX 0xFF, 0x00, 0x04, 0x1D, 0x0B
+//HEX FF 00 04 1D 0B
 //DEC 255,0,4,29,11
   
-//int data1 = 255,0,4,29,11;
-    int data1 = 25500042911;
+USB.println(F("Sent Boot HEX to ThingMagic Reader"));
+int data1 = 1095216930059;
 // Send 12345 in hexadecimal base. It prints 0xFF, 0x00, 0x04, 0x1D, 0x0B.
     W232.send(data1, HEX);
     delay(2000);
@@ -89,25 +90,27 @@ void loop()
 // %%%%%%%%%%%%%%%%%%%%%%%% Firmware Details%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 // Send data through RS-232 line
 
-//HEX 0xFF, 0x00, 0x03, 0x1D, 0x0c
+//HEX FF00031D0c
 //DEC 255,00,03,29,12
  
-int data2 = 25500032912;
-// Send 12345 in hexadecimal base. It prints 0xFF, 0x00, 0x03, 0x1D, 0x0c .
+USB.println(F("Request Firmware info from ThingMagic Reader"));
+int data2 = 1095216864524;
+//Send 25500032912 in hexadecimal base. It prints 0xFF, 0x00, 0x03, 0x1D, 0x0c .
 W232.send(data2, HEX);
      
      
  // %%%%%%%%%%%%%%%%%%%%%%%% Listem for Data Recived %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 // %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Print Data %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-      
+  
+  USB.println(F("listen for info from ThingMagic Reader"));    
   if(W232.receive() > 0)
   { 
     USB.println(W232._buffer, W232._length);
   }
 
-  delay(100);   
+  delay(1000);   
      
- 
+
  
 
 }
